---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/modules_many_errors/BrokenMatch.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Match Arm Arrow

I was expecting `->` in this match arm, but I found a string literal.

  examples/parser_errors/modules_many_errors/BrokenMatch.flx:4:15
  |
4 |             0 "zero",
  |               ^^^^^^

Note:
  while parsing module `BrokenMatch` > function `classify` > `match` expression

Help:
  Write match arms as `match x { pattern -> body, ... }`.
== stdout ==
<not executed>
